classDiagram
    class Database {
        <<interface>>
        +save(data: string) void
    }

    class MySQLDatabase {
        +save(data: string) void
    }

    class MongoDBDatabase {
        +save(data: string) void
    }

    class UserService {
        -db: Database*
        +UserService(db: Database*)
        +setDatabase(db: Database*) void
        +storeUser(user: string) void
    }

    Database <|.. MySQLDatabase
    Database <|.. MongoDBDatabase
    UserService --> Database : depends on
